--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/swagger-ui-express": "^4.1.7",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.3.0",
+    "swagger-ui-express": "^5.0.1",
     "tsx": "^4.19.2"
   },
   "devDependencies": {
