--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/local-auth": "^2.1.0",
-    "@nestjs/passport": "^10.0.3",
-    "@types/axios": "^0.14.4",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.0",
     "@types/express-validator": "^3.0.2",
     "@types/mongoose": "^5.11.97",
+    "@types/passport": "^1.0.17",
+    "@types/passport-github2": "^1.2.9",
     "@types/swagger-ui-express": "^4.1.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "express-session": "^1.18.1",
     "http-status-codes": "^2.3.0",
+    "mongoose": "^8.8.1",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "swagger-ui-express": "^5.0.1",
     "tsx": "^4.19.2"
   },
