--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.0",
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.8.1",
     "passport": "^0.7.0",
